@@ -122,6 +122,8 @@ fully support the editing toolbar, but was found to be too confusing.
 * Add options to dumpBackup.php for making split/partial dumps by page id
 * Fix language name for dv
 * (bug 3503) Update LanguageSq.php from sq.wikipedia.org messages
+* Added EditFilter hook, and output callback on EditPage::showEditForm()
+  for a place to add in captcha-type extensions in the edit flow
 
 
 === Caveats ===
